--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 250, 250, 250;
-  --background-rgb: 50, 50, 50;
-  --background-primary: #72161D;
-  --text-primary: #FFFFFF;
-  --highlight-primary: #FAD215;
-  --highlight-secondary: #F8F7DA;
-}
-
 body {
-  color: var(--text-primary);
-  background: var(--background-primary);
+  color: theme(colors.text-primary);
+  background: theme(colors.background-primary);
 }
