--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   );
   --background-image-home-image: url('/welcome-ceremony.jpg');
   /* --background-image-noise-base: repeating-gradient(#111, #111 50%, #000 50%, #000); */
-  --background-image-noise-base: linear-gradient(black, white);
+  --background-image-noise-base: repeating-linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2) 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2));
   --background-image-noise: url('/generated-html.svg');
   --background-image-gradient:
     linear-gradient(
